@@ -1,5 +1,8 @@
 Revision history for Perl extension MooseX-Getopt
 
+  * MooseX::Getopt
+    - Enable and document the argv parameter to the constructor.
+
 0.20 Wed. July 9 2009
 	~ fix MANIFEST.SKIP to avoid double-packaging
 
